# apps/api/src/features/semantic-score/dto/calculate-semantic-score.dto.ts
@@ -1,5 +1,6 @@
-import { ApiProperty } from '@nestjs/swagger';
+import { ApiProperty, ApiSchema } from '@nestjs/swagger';
 
+@ApiSchema({ name: 'CalculateSemanticScoreRequest' })
 export class CalculateSemanticScoreRequestDTO {
   @ApiProperty({
     description: 'YAML file to process for semantic scoring',
