# packages/schema-editor-utils/src/semantic-score/semantic-score.ts
@@ -1,28 +1,22 @@
 import { fromJS, Map } from 'immutable';
 import { resolveJsonldContext, resolvePropertyByJsonldContext } from '../jsonld';
 import { resolveOpenAPISpec } from '../openapi';
-import { ModelCalculationDetails, Summary } from './models';
+import { ModelSummary, PropertySummary, SemanticScoreSummary } from './models/calculation-details';
 
-export class ResolvedPropertiesGroups {
-  valid: string[] = [];
-  unknown: string[] = [];
-}
-
-export async function determinePropertiesToValidate(jsonldContext: Map<any, any>, propertiesPaths: string[][]) {
-  const resolvedProperties = await Promise.all(
-    propertiesPaths.map((propertyPath) => resolvePropertyByJsonldContext(jsonldContext, propertyPath)),
-  );
-  const resolvedPropertiesFieldUris = resolvedProperties.map((x) => x.fieldUri as string);
-  const resolvedPropertiesGroups: ResolvedPropertiesGroups = resolvedPropertiesFieldUris.reduce((groups, fieldUri) => {
-    if (fieldUri?.startsWith('@')) {
-      groups.valid = [...groups.valid.filter((x) => x !== fieldUri), fieldUri];
-    } else if (fieldUri) {
-      groups.unknown = [...groups.unknown.filter((x) => x !== fieldUri), fieldUri];
-    }
-    return groups;
-  }, new ResolvedPropertiesGroups());
-
-  return resolvedPropertiesGroups;
+export async function determinePropertiesToValidate(
+  jsonldContext: Map<any, any>,
+  propertiesPaths: string[][],
+): Promise<PropertySummary[]> {
+  const resolvedProperties: PropertySummary[] = [];
+  for (const propertyPath of propertiesPaths) {
+    const resolvedProperty = await resolvePropertyByJsonldContext(jsonldContext, propertyPath);
+    resolvedProperties.push({
+      name: propertyPath.join('.'),
+      uri: resolvedProperty.fieldUri ?? null,
+      valid: resolvedProperty.fieldUri?.startsWith('@') ?? false,
+    });
+  }
+  return resolvedProperties;
 }
 
 export function buildSemanticScoreSparqlQuery(properties: string[]) {
@@ -48,7 +42,81 @@ export async function fetchValidSemanticScoreProperties(
   return sparqlData?.results?.bindings?.map((x) => x.fieldUri.value) || [];
 }
 
-export async function calculateSchemaSemanticScore(specJson: any, options: { sparqlUrl: string }) {
+export async function calculateModelSemanticScore(
+  dataModelKey: string,
+  dataModelValue: Map<any, any>,
+  jsonldContext: Map<any, any> | undefined,
+  options: { sparqlUrl: string },
+): Promise<ModelSummary> {
+  // Check required parameters
+  if (!dataModelKey || !dataModelValue) {
+    throw new Error('Data model key or value is missing');
+  }
+
+  // Filter only data models with type "object"
+  const isObject = (dataModelValue.get('type', '') as string | undefined)?.toLowerCase() === 'object';
+  if (!isObject) {
+    throw new Error(`Data model ${dataModelKey} is not an object`);
+  }
+
+  // Determine informations
+  const hasAnnotations = dataModelValue.has('x-jsonld-context');
+  const propertiesPaths: string[][] =
+    dataModelValue
+      .get('properties')
+      ?.keySeq()
+      .toArray()
+      .map((x) => [x]) || [];
+
+  // Missing x-jsonld-context
+  if (!jsonldContext) {
+    return {
+      name: dataModelKey,
+      score: 0,
+      hasAnnotations,
+      rawPropertiesCount: propertiesPaths.length,
+      validPropertiesCount: 0,
+      invalidPropertiesCount: propertiesPaths.length,
+      properties: propertiesPaths.map((x) => ({ name: x.join('.'), uri: null, valid: false })),
+    };
+  }
+
+  // Determine properties to validate
+  const allPropertiesSummary = await determinePropertiesToValidate(jsonldContext, propertiesPaths);
+  const unknownPropertiesSummaryUris = allPropertiesSummary.filter((x) => !x.valid).map((x) => x.uri as string);
+
+  // Execute sparql fetch to check if mapped onto-properties are correct
+  if (unknownPropertiesSummaryUris.length > 0) {
+    const sparqlValidPropertiesUris = await fetchValidSemanticScoreProperties(unknownPropertiesSummaryUris, {
+      sparqlUrl: options.sparqlUrl,
+    });
+    for (const sparqlValidPropertyUri of sparqlValidPropertiesUris) {
+      const propertySummary = allPropertiesSummary.find((x) => x.uri === sparqlValidPropertyUri);
+      if (propertySummary) {
+        propertySummary.valid = true;
+      }
+    }
+  }
+
+  const rawPropertiesCount = allPropertiesSummary.length;
+  const validPropertiesCount = allPropertiesSummary.filter((x) => x.valid === true).length;
+  const score = rawPropertiesCount > 0 ? validPropertiesCount / rawPropertiesCount : 0;
+
+  return {
+    name: dataModelKey,
+    score,
+    hasAnnotations,
+    rawPropertiesCount,
+    validPropertiesCount,
+    invalidPropertiesCount: rawPropertiesCount - validPropertiesCount,
+    properties: allPropertiesSummary,
+  };
+}
+
+export async function calculateSchemaSemanticScore(
+  specJson: any,
+  options: { sparqlUrl: string },
+): Promise<{ resolvedSpecJson: any; schemaSemanticScore: number; summary: SemanticScoreSummary }> {
   const resolvedSpecJson = await resolveOpenAPISpec(specJson);
   const resolvedSpecOrderedMap = fromJS(resolvedSpecJson);
 
@@ -60,31 +128,8 @@ export async function calculateSchemaSemanticScore(specJson: any, options: { spa
 
   // Calculate specific and schema semantic scores
   let rawModelsCount = 0;
-  let positiveScoreModelsCount = 0;
   let schemaSemanticScoreSum = 0;
-  const calculationDetails: ModelCalculationDetails[] = [];
-
-  const setSingleModelSemanticScoreValue = ({
-    modelName,
-    score,
-    hasAnnotations,
-    validPropertiesPaths,
-    invalidPropertiesPaths,
-  }: ModelCalculationDetails) => {
-    resolvedSpecJson['components']['schemas'][modelName]['x-semantic-score'] = score;
-    schemaSemanticScoreSum += score;
-    rawModelsCount++;
-    if (score > 0) {
-      positiveScoreModelsCount++;
-    }
-    calculationDetails.push({
-      modelName,
-      score,
-      hasAnnotations,
-      validPropertiesPaths,
-      invalidPropertiesPaths,
-    });
-  };
+  const modelsSummary: ModelSummary[] = [];
 
   // Process every datamodel
   for (const [dataModelKey, dataModel] of dataModels.entries()) {
@@ -94,66 +139,26 @@ export async function calculateSchemaSemanticScore(specJson: any, options: { spa
       continue;
     }
 
-    // Extract x-jsonld-context if present
-    if (!dataModel.has('x-jsonld-context')) {
-      setSingleModelSemanticScoreValue({
-        modelName: dataModelKey,
-        score: 0,
-        hasAnnotations: false,
-        validPropertiesPaths: [],
-        invalidPropertiesPaths: [],
-      });
-      continue;
-    }
+    // Extract x-jsonld-context
+    const jsonldContext = dataModel.has('x-jsonld-context')
+      ? resolveJsonldContext(dataModel)?.get('@context')
+      : undefined;
 
-    // Extract x-jsonld-context if present
-    const jsonldContext = resolveJsonldContext(dataModel)?.get('@context');
-    if (!jsonldContext) {
-      setSingleModelSemanticScoreValue({
-        modelName: dataModelKey,
-        score: 0,
-        hasAnnotations: false,
-        validPropertiesPaths: [],
-        invalidPropertiesPaths: [],
-      });
-      continue;
-    }
-
-    // Determine data model's properties to use for semantic score calculation
-    const propertiesPaths: string[][] =
-      dataModel
-        .get('properties')
-        ?.keySeq()
-        .toArray()
-        .map((x) => [x]) || [];
-
-    // Determine properties to validate
-    const { valid: validPropertiesPaths, unknown: unknownPropertiesPaths } = await determinePropertiesToValidate(
-      jsonldContext,
-      propertiesPaths,
-    );
-
-    // Execute sparql fetch to check if mapped onto-properties are correct
-    let sparqlValidProperties: string[] = [];
-    if (unknownPropertiesPaths.length > 0) {
-      sparqlValidProperties = await fetchValidSemanticScoreProperties(unknownPropertiesPaths, {
-        sparqlUrl: options.sparqlUrl,
-      });
-    }
-    const allValidFieldUris = [...validPropertiesPaths, ...sparqlValidProperties];
-    const rawPropertiesPaths = [...validPropertiesPaths, ...unknownPropertiesPaths];
-    const rawPropertiesCount = rawPropertiesPaths.length;
-    const semanticPropertiesCount = allValidFieldUris.length;
-    const score = rawPropertiesCount > 0 ? semanticPropertiesCount / rawPropertiesCount : 0;
-
-    setSingleModelSemanticScoreValue({
-      modelName: dataModelKey,
-      score,
-      hasAnnotations: true,
-      validPropertiesPaths: allValidFieldUris,
-      invalidPropertiesPaths: rawPropertiesPaths.filter((x) => !allValidFieldUris.includes(x)),
-    });
+    // Calculate model semantic score
+    const modelSummary = await calculateModelSemanticScore(dataModelKey, dataModel, jsonldContext, options);
+    resolvedSpecJson['components']['schemas'][modelSummary.name]['x-semantic-score'] = modelSummary.score;
+    schemaSemanticScoreSum += modelSummary.score;
+    rawModelsCount++;
+    modelsSummary.push(modelSummary);
   }
+
+  // Final summary
+  const summary: SemanticScoreSummary = {
+    score: rawModelsCount > 0 ? schemaSemanticScoreSum / rawModelsCount : 0,
+    timestamp: Date.now(),
+    sparqlEndpoint: options.sparqlUrl,
+    models: modelsSummary,
+  };
 
   // Setting schema semantic score (calculated as an average semantic score value)
   if (!resolvedSpecJson['info']) {
@@ -162,12 +167,6 @@ export async function calculateSchemaSemanticScore(specJson: any, options: { spa
   const schemaSemanticScore = Number((rawModelsCount > 0 ? schemaSemanticScoreSum / rawModelsCount : 0).toFixed(2));
   resolvedSpecJson['info']['x-semantic-score'] = schemaSemanticScore;
   resolvedSpecJson['info']['x-semantic-score-timestamp'] = Date.now();
-
-  const summary: Summary = {
-    rawModelsCount,
-    positiveScoreModelsCount,
-    modelsCalculationDetails: calculationDetails,
-  };
 
   return {
     resolvedSpecJson,
